# multiclaude

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SPEC.md  mc-sandbox  mise.toml  pyproject.toml  ruff.toml  sandbox-admin
completions/: multiclaude
multiclaude/: __init__.py  cli.py  config.py  errors.py  git_utils.py  mc_sandbox.py  sandbox_admin.py  sandbox_utils.py  strategies.py  tasks.py
scripts/: coverage-annotate.sh
tests/: conftest.py  test_cd.py  test_clone_strategy.py  test_config.py  test_git_strategies.py  test_git_utils.py  test_init.py  test_list.py  test_new.py  test_prune.py  test_resume.py  test_submodule_strategies.py
