[project]
name = "multiclaude"
version = "0.1.0"
description = "CLI tool for managing parallel Claude Code instances with isolated environments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = ["pytest>=8.0.0"]

[project.scripts]
multiclaude = "multiclaude:main"
mc-sandbox = "multiclaude.mc_sandbox:main"
sandbox-admin = "multiclaude.sandbox_admin:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
