[project]
name = "multiclaude"
version = "0.2.0"
description = "CLI tool for managing parallel Claude Code instances with isolated environments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=7.0.0",
    "pre-commit>=3.5.0",
    "mypy>=1.8.0"
]

[project.scripts]
multiclaude = "multiclaude:main"
mc-sandbox = "multiclaude.mc_sandbox:main"
sandbox-admin = "multiclaude.sandbox_admin:main"

[tool.pytest.ini_options]
addopts = [
    "-n", "auto",  # Use pytest-xdist with auto-detection of CPU cores
    "--dist", "worksteal",  # Better work distribution for uneven test durations
]

[tool.coverage.report]
show_missing = true

[tool.coverage.annotate]
directory = "coverage"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
